2008-07-12  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* arch/unix/x11/gnome/x11ui.c: removed weird unicode character
	from a commentary in ui_open_canvas_window().

	* c64/reu.c: Fixed a bug with transfer and swap file operations
	introduced on 2008-07-10; Added assert()s for input parameters
	in reu_dma_update_reads(), reu_dma_host_to_dma(),
	reu_dma_reu_to_host(), reu_dma_compare(); Fixed an error in
	reu_dma_compare() where it "forgot" to generate an IRQ if a
	verify error occurred; length is now written correctly in
	reu_dma_update_regs() (value 0x10000 was not corrected to 0!).

2008-07-10  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.25

2008-07-10  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* c64/reu.c: The status register bits are not reset if a new
	transfer starts without reading the status register; however,
	the interrupt only occurs if they are set again to new values.

2008-07-09  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* c64/reu.c: set_reu_size(): Do not reset
	first_unused_register_address; remove a warning about
	uninitialised object in reu_read().

2008-07-08  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* translate.c: Updated the dutch translations.

2008-07-08  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* translate.c: 2 new texts for -autostartrunwithcolon.

	* arch/win32/resc128.rc, arch/win32/c128ui.c: cosmetic change:
	Norwegain -> Norwegian.

2008-06-22  pottendo  <pottendo@aon.at>

	* c128/c128-cmdline-options.c (cmdline_options): cosmetic change:
	Norwegain -> Norwegian.

	* arch/unix/joy.c (new_joystick_init): cosmetic change.

2008-07-07  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.24

2008-07-07  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* c64/reu.c: fixed "end-of-block" for REU compare operation
	according to Wolfgang Moser's REU reference.

	* init.c, autostart.c, autostart.h, translate.txt, translate.c: